# s25rttr

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  README.md  build_paths.h.cmake  build_paths.h.in  build_version.cpp  create_local_h.sh  dailyversion.sh  local.h.cmake  local.h.in  populate_builddir.sh  revision  start.sh  version.cpp  version.h.cmake
driver/: CMakeLists.txt
driver/audio/: CMakeLists.txt
driver/audio/SDL/: CMakeLists.txt
driver/codelite/: audio.project  video.project
driver/src/: AudioDriver.cpp  AudioDriver.h  AudioInterface.cpp  AudioInterface.h  CMakeLists.txt  DriverInterface.cpp  DriverInterface.h  DriverInterfaceVersion.h  Interface.h  Sound.cpp  Sound.h  VideoDriver.cpp  VideoDriver.h  VideoInterface.cpp  VideoInterface.h  main.h  tempname.cpp  tempname.h
driver/video/: CMakeLists.txt
driver/video/GLFW/: CMakeLists.txt
driver/video/SDL/: CMakeLists.txt
driver/video/WinAPI/: CMakeLists.txt
driver/win32/vs2005/: audio.vcproj  video.vcproj
driver/win32/vs2008/: audio.vcproj  video.vcproj
driver/win32/vs2010/: audio.vcxproj  audio.vcxproj.filters  video.vcxproj  video.vcxproj.filters
liblobby/: CMakeLists.txt
liblobby/libutil/: CMakeLists.txt
liblobby/libutil/src/: CMakeLists.txt  Log.cpp  Log.h  Message.cpp  Message.h  MessageInterface.cpp  MessageInterface.h  MessageQueue.cpp  MessageQueue.h  Messages.cpp  Messages.h  MyTime.cpp  MyTime.h  SerializableArray.cpp  SerializableArray.h  Serializer.cpp  Serializer.h  Singleton.h  Socket.cpp  Socket.h  SocketSet.cpp  SocketSet.h  UPnP.cpp  UPnP.h  colors.h  error.cpp  error.h  files.cpp  files.h  libutil.h  main.h
liblobby/src/: CMakeLists.txt  LobbyClient.cpp  LobbyClient.h  LobbyInterface.cpp  LobbyInterface.h  LobbyMessage.cpp  LobbyMessage.h  LobbyMessageInterface.cpp  LobbyMessageInterface.h  LobbyMessages.cpp  LobbyMessages.h  LobbyPlayer.cpp  LobbyPlayer.h  LobbyPlayerInfo.cpp  LobbyPlayerInfo.h  LobbyPlayerList.cpp  LobbyPlayerList.h  LobbyProtocol.h  LobbyServer.cpp  LobbyServer.h  LobbyServerInfo.cpp  LobbyServerInfo.h  LobbyServerList.cpp  LobbyServerList.h  MySQL.cpp  MySQL.h  liblobby.h  main.h
liblobby/win32/vs2010/: liblobby_c.vcxproj
libsiedler2/: CMakeLists.txt  INSTALL
libsiedler2/codelite/: libsiedler2.project
libsiedler2/libendian/codelite/: libendian.project
libsiedler2/libendian/m4/: debug.m4
libsiedler2/libendian/src/: CMakeLists.txt  libendian.cpp  libendian.h  read_char.cpp  swap.cpp  write_short.cpp
libsiedler2/src/: ArchivInfo.cpp  ArchivInfo.h  ArchivItem.cpp  ArchivItem.h  ArchivItem_Bitmap.cpp  ArchivItem_Bitmap.h  ArchivItem_Bitmap_Player.cpp  ArchivItem_Bitmap_Player.h  ArchivItem_Bitmap_RLE.cpp  ArchivItem_Bitmap_RLE.h  ArchivItem_Bitmap_Raw.cpp  ArchivItem_Bitmap_Raw.h  ArchivItem_Bitmap_Shadow.cpp  ArchivItem_Bitmap_Shadow.h  ArchivItem_Bob.cpp  ArchivItem_Bob.h  ArchivItem_Font.cpp  ArchivItem_Font.h  ArchivItem_Ini.cpp  ArchivItem_Ini.h  ArchivItem_Map.cpp  ArchivItem_Map.h  ArchivItem_Map_Header.cpp  ArchivItem_Map_Header.h  ArchivItem_Palette.cpp  ArchivItem_Palette.h  ArchivItem_Raw.cpp  ArchivItem_Raw.h  ArchivItem_Sound.cpp  ArchivItem_Sound.h  ArchivItem_Sound_Midi.cpp  ArchivItem_Sound_Midi.h  ArchivItem_Sound_Other.cpp  ArchivItem_Sound_Other.h  ArchivItem_Sound_Wave.cpp  ArchivItem_Sound_Wave.h  ArchivItem_Sound_XMidi.cpp  ArchivItem_Sound_XMidi.h  ArchivItem_Text.cpp  ArchivItem_Text.h  (+40 more)
libsiedler2/test/: outline.cpp
libsiedler2/test/lstpacker/: lstpacker.cpp  lstpacker.vcproj  pack.cpp  unpack.cpp  util.h
libsiedler2/test/outline/: outline.cpp
libsiedler2/win32/: libsiedler2.def
libsiedler2/win32/vs2008/: libsiedler2.vcproj
libsiedler2/win32/vs2010/: libsiedler2.vcxproj
libutil/: CMakeLists.txt
libutil/src/: CMakeLists.txt  Log.cpp  Log.h  Message.cpp  Message.h  MessageInterface.cpp  MessageInterface.h  MessageQueue.cpp  MessageQueue.h  Messages.cpp  Messages.h  MyTime.cpp  MyTime.h  Protocol.h  SerializableArray.cpp  SerializableArray.h  Serializer.cpp  Serializer.h  Singleton.h  Socket.cpp  Socket.h  SocketSet.cpp  SocketSet.h  UPnP.cpp  UPnP.h  colors.h  error.cpp  error.h  files.cpp  files.h  libutil.h  main.h
libutil/win32/vs2008/: libutil.vcproj
libutil/win32/vs2010/: libutil.vcxproj
mygettext/: CMakeLists.txt
mygettext/codelite/: mygettext.project
mygettext/libendian/: CMakeLists.txt
mygettext/libendian/codelite/: libendian.project
mygettext/libendian/src/: main.h  read_char.cpp  read_int.cpp  read_short.cpp  write_char.cpp  write_int.cpp  write_short.cpp
mygettext/src/: CMakeLists.txt  gettext.cpp  gettext.h  main.h  mygettext.cpp  mygettext.h
s-c/: CMakeLists.txt
s-c/contrib/: libsamplerate-0.1.2-vc.rar  libsndfile-1_0_17-vc.rar
s-c/libsiedler2/: CMakeLists.txt
s-c/libsiedler2/m4/: debug.m4  (+1 more)
s-c/resample-1.8.1/: CMakeLists.txt
s-c/src/: CMakeLists.txt  getopt.cpp  getopt.h  getopt_long.cpp  main.cpp  sample_rate_convert.cpp  sample_rate_convert.h  tempname.cpp  tempname.h  tokenizer.hpp
s25update/: CMakeLists.txt
s25update/contrib/: libcurl-7.19.0-devel-msvc.rar
s25update/src/: CMakeLists.txt  main.cpp  main.h  md5.cpp  md5.h  md5sum.cpp  md5sum.h
s25update/win32/: resource.h
src/: AIBase.h  AIConstruction.cpp  AIConstruction.h  AIEventManager.cpp  AIEventManager.h  AIInterface.cpp  AIInterface.h  AIJHHelper.cpp  AIJHHelper.h  AIPlayer.cpp  AIPlayer.h  AIPlayerJH.cpp  AIPlayerJH.h  AIResourceMap.cpp  AIResourceMap.h  AddonAIDebugWindow.h  AddonAdjustMilitaryStrength.h  AddonCatapultGraphics.h  AddonChangeGoldDeposits.h  AddonCharburner.h  AddonCustomBuildSequence.h  AddonDefenderBehavior.h  AddonDemolitionProhibition.h  AddonExhaustibleWells.h  AddonInexhaustibleMines.h  AddonLimitCatapults.h  AddonManager.cpp  AddonManager.h  AddonManualRoadEnlargement.h  AddonMaxWaterwayLength.h  AddonNoCoinsDefault.h  AddonRefundMaterials.h  AddonRefundOnEmergency.h  AddonStatisticsVisibility.h  Addons.cpp  Addons.h  AudioDriverLoaderInterface.h  AudioDriverWrapper.cpp  AudioDriverWrapper.h  BinaryFile.cpp  (+501 more)
version/: CMakeLists.txt
version/src/: CMakeLists.txt  main.cpp
(+455 files in other folders)
