################################################################################
### $Id: CMakeLists.txt 5035 2009-06-11 10:00:01Z FloSoft $
################################################################################

ADD_SUBDIRECTORY( src ) 
ADD_SUBDIRECTORY( video ) 
ADD_SUBDIRECTORY( audio ) 

#################################################################################
