################################################################################
### $Id: CMakeLists.txt 5486 2009-09-07 15:41:39Z FloSoft $
################################################################################

ADD_SUBDIRECTORY( src )

#################################################################################

ADD_SUBDIRECTORY( video ) 
ADD_SUBDIRECTORY( audio ) 

#################################################################################
