#################################################################################
### $Id: CMakeLists.txt 5487 2009-09-07 15:44:27Z FloSoft $
#################################################################################

ADD_SUBDIRECTORY( libendian ) 
ADD_SUBDIRECTORY( src ) 

#################################################################################
