#################################################################################
### $Id: CMakeLists.txt 4154 2008-10-21 19:08:14Z FloSoft $
#################################################################################

#ADD_SUBDIRECTORY( libendian ) 
ADD_SUBDIRECTORY( src ) 

#################################################################################
