#################################################################################
### $Id: CMakeLists.txt 2909 2007-11-06 21:55:27Z FloSoft $
#################################################################################

#ADD_SUBDIRECTORY( libsiedler2 ) 
ADD_SUBDIRECTORY( src ) 

#################################################################################
