ADD_SUBDIRECTORY( SDL ) 


########### install files ###############




#original Makefile.am contents follow:

#################################################################################
### $Id: Makefile.am 1753 2007-04-17 10:36:41Z FloSoft $
#################################################################################
#
## Verweis auf die Makefiles der Unterverzeichnisse
#SUBDIRS = SDL
#
#.PHONY: mrproper
#
#mrproper:
#	sh $(srcdir)/cleanup.sh
