ADD_SUBDIRECTORY( SDL ) 


########### install files ###############




#original Makefile.am contents follow:

#################################################################################
### $Id: CMakeLists.txt 5113 2009-06-26 08:23:54Z FloSoft $
#################################################################################
#
## Verweis auf die Makefiles der Unterverzeichnisse
#SUBDIRS = SDL
#
#.PHONY: mrproper
#
#mrproper:
#	sh $(srcdir)/cleanup.sh
