#################################################################################
### $Id: CMakeLists.txt 5211 2009-07-07 13:14:17Z FloSoft $
#################################################################################

ADD_SUBDIRECTORY( WinAPI )
ADD_SUBDIRECTORY( GLFW )
ADD_SUBDIRECTORY( SDL )

#################################################################################
