#################################################################################
### $Id: CMakeLists.txt 6320 2010-04-13 15:30:16Z FloSoft $
#################################################################################

ADD_SUBDIRECTORY( WinAPI )
ADD_SUBDIRECTORY( GLFW )
ADD_SUBDIRECTORY( SDL )

#################################################################################
